syntax = "proto3";

package site;

import "core/user.proto";

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ApiUserUpdateProfileProto";

// options for php
// option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";

/**
 * 接口名<action_name>：
 * 		api.user.updateProfile
 *
 * 功能描述：
 * 		更新用户个人信息
 *
 * 支持的错误ID：
 * 		success							//更新成功
 *  		error.alert						//更新失败
 */
service ApiUserUpdateProfileService {
    rpc updateProfile(ApiUserUpdateProfileRequest) returns(ApiUserUpdateProfileResponse);
}

message ApiUserUpdateProfileRequest {
	    core.UserProfile user_profile = 1;		//更新的用户详细信息
}

message ApiUserUpdateProfileResponse {
}
