syntax = "proto3";

package core;

option java_package = "com.windchat.proto.core";
option java_outer_classname = "FileProto";

// options for php
//option php_namespace = "Akaxin\\Proto\\Core";

//上传站点服务端的文件
message File {
	string file_id = 1;
	bytes file_content = 2;
	FileType file_type = 3;
}

// 文件信息的描述
message FileDesc {
	int32 length = 1; //语音的长度
	int32 width = 2; //图片的宽
	int32 height = 3; //图片的高
	int32 size = 4; //视频的大小，单位kb
}

enum FileType {
	UNKNOWN_FILE = 0; // 未知的文件类型类型
	USER_PORTRAIT = 1; //用户头像
	MESSAGE_IMAGE = 2; // 个人消息，群图片消息
	MESSAGE_VOICE = 3; // 个人，群语音消息
	GROUP_PORTRAIT = 4; //群头像
	SITE_PLUGIN = 5; // 站点扩展图片存放位置
	SITE_ICON = 6; //站点本身相关图片，例如站点logo
}
